// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar/> renders correctly if prop expanded set false 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql hpZSwh"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf jhmGKh"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop expanded set true 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql cilTGP"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf bhBdLp"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set false 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql cilTGP"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf bhBdLp"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql depIyH"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf loJghn"
  >
    <button
      className="SidebarToggleStyled__SidebarToggleStyled-KYhye jTJvlU"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled__ToggleIconStyled-fKRibG csrLxa"
        type="svg"
      >
        <div
          className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
          color=""
          name="angle-left"
          rotate={0}
          size="normal"
          type="svg"
        >
          <svg
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
            />
          </svg>
        </div>
      </div>
      <div
        className="ToggleContentStyled__ToggleContentStyled-kQGYBy iflKfw"
      >
        <div
          className="ToggleTextStyled__ToggleTextStyled-gUfxuQ hxVmIj"
        >
          Collapse
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true and toggleButtonText set 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql depIyH"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf loJghn"
  >
    <button
      className="SidebarToggleStyled__SidebarToggleStyled-KYhye jTJvlU"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled__ToggleIconStyled-fKRibG csrLxa"
        type="svg"
      >
        <div
          className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
          color=""
          name="angle-left"
          rotate={0}
          size="normal"
          type="svg"
        >
          <svg
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
            />
          </svg>
        </div>
      </div>
      <div
        className="ToggleContentStyled__ToggleContentStyled-kQGYBy iflKfw"
      >
        <div
          className="ToggleTextStyled__ToggleTextStyled-gUfxuQ hxVmIj"
        >
          test
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set false 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql cilTGP"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf bhBdLp"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set true 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql cilTGP"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf bhBdLp"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop spread set true 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql cilTGP"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf bhBdLp"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly with default props 1`] = `
<aside
  className="SidebarStyled__SidebarStyled-fRvCql cilTGP"
>
  <div
    className="SidebarBoxStyled__SidebarBoxStyled-hutMIf bhBdLp"
  />
</aside>
`;

exports[`<SidebarRegion/> renders correctly if prop bordered 1`] = `
<div
  className="SidebarRegionStyled__SidebarRegionStyled-cYXjEi eZEPaB"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollable 1`] = `
<div
  className="SidebarRegionStyled__SidebarRegionStyled-cYXjEi eFCXri"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollableMinHeight set 0 1`] = `
<div
  className="SidebarRegionStyled__SidebarRegionStyled-cYXjEi cWiuQb"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop spread 1`] = `
<div
  className="SidebarRegionStyled__SidebarRegionStyled-cYXjEi hDDyJh"
/>
`;

exports[`<SidebarRegion/> renders correctly with default props 1`] = `
<div
  className="SidebarRegionStyled__SidebarRegionStyled-cYXjEi cWiuQb"
/>
`;

exports[`<SidebarToggle/> renders correctly if prop toggleButtonText set 1`] = `
<button
  className="SidebarToggleStyled__SidebarToggleStyled-KYhye jTJvlU"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled__ToggleIconStyled-fKRibG hIDBZI"
    type="svg"
  >
    <div
      className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
      color=""
      rotate={0}
      size="normal"
      type="svg"
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
        />
      </svg>
    </div>
  </div>
  <div
    className="ToggleContentStyled__ToggleContentStyled-kQGYBy iflKfw"
  >
    <div
      className="ToggleTextStyled__ToggleTextStyled-gUfxuQ CRanA"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<SidebarToggle/> renders correctly with default props 1`] = `
<button
  className="SidebarToggleStyled__SidebarToggleStyled-KYhye jTJvlU"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled__ToggleIconStyled-fKRibG hIDBZI"
    type="svg"
  >
    <div
      className="IconSvgStyled__IconSvgStyled-iCtyLo hlSHcB"
      color=""
      rotate={0}
      size="normal"
      type="svg"
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,5.5c0-0.1,0-0.1,0-0.2c-0.1-0.1-0.1-0.2-0.3-0.3c-0.1,0-0.1,0-0.2,0h-10C8.4,5,8.4,5,8.3,5c-0.1,0-0.1,0.1-0.2,0.1l-3,3 c0,0-0.1,0.1-0.1,0.2c0,0.1,0,0.1,0,0.2v10C5,18.8,5.2,19,5.5,19h10c0.1,0,0.1,0,0.2,0c0.1,0,0.1-0.1,0.2-0.1l3-3 c0,0,0.1-0.1,0.1-0.2c0-0.1,0-0.1,0-0.2V5.5z M16,16h1.3L16,17.3V16z M18,15h-2V8.7l2-2V15z M9,9h6v6H9V9z M8,8H6.7L8,6.7V8z M9,6 h8.3l-2,2H9V6z M6,9h2v6.5C8,15.8,8.2,16,8.5,16H15v2H6V9z"
        />
      </svg>
    </div>
  </div>
  <div
    className="ToggleContentStyled__ToggleContentStyled-kQGYBy iflKfw"
  >
    <div
      className="ToggleTextStyled__ToggleTextStyled-gUfxuQ CRanA"
    >
      Collapse
    </div>
  </div>
</button>
`;
